--- a/style.css
+++ b/style.css
@@ -6,16 +6,17 @@
 
 
 body {
-    border: solid;
     width: 1120px;
     background-color: #F5F4F0;
     font-family: "Open Sans", sans-serif;
-    margin: 88px 80px;      
+    margin: 88px 80px 137px 80px;  
+    padding-left: 0px;    
 }
 
 img {
     border-radius: 28px;
     width: 1120px;
+
 }
 
 h1 {
@@ -83,23 +84,52 @@ p {
    margin-bottom: 64px;
 }
 
-ol {
-    
-    font-size: 28px;
-    font-weight: bold;
-    box-sizing: border-box;
-    
-}
 
 #title {
     font-size: 28px;
     font-weight: bold;
+    padding-left: 10px;
+
 }
 
-#yong img {
+#hist {
+    padding-left: 25px;
+    font-weight: bold;
+    padding-bottom: 48px;
+}
+
+.his {
+    color: #0C51A7;
+}
+
+#photo {
     padding-bottom: 20px;
 }
 
+#items {
+    padding-left: 25px;
+    font-weight: bold;
+    padding-bottom: 48px;
+}
+#it{
+    color: #591B98;
+}
+#ite {
+    color: #E5245E;
+}
+#item {
+    color: #E95E10;
+    padding-bottom: 40px;
+}
+#bottom {
+    text-align: center;
+    padding-bottom: 65px;
+}
+
+footer {
+    text-align: center;
+    padding-bottom: 48px;
+}
 
 footer img { 
     width: 16px;
